# composable

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  test.py  text.py
.github/workflows/: ci-cd.yml  release.yml
composable/: __init__.py  dict.py  glob.py  lazy.py  list.py  maybe.py  object.py  operator.py  operator_.py  origami.py  pipeable.py  pipeable_object_prototype.ipynb  re.py  records.py  sequence.py  strict.py  string.py  tuple.py  tuples.py  utility.py
dev_docs/: design_info.ipynb
dev_docs/.ipynb_checkpoints/: design_info-checkpoint.ipynb
docs/: Makefile  conf.py  example.ipynb  make.bat
notebooks/: pipeable_objects.ipynb
tests/: test_composable.py  test_dict.py  test_from_toolz.py  test_glob.py  test_list.py  test_maybe.py  test_operator.py  test_pipeable.py  test_sequence.py  test_strict.py  test_string.py  test_tuple.py
