[tool.poetry]
name = "composable"
version = "0.2.1"
description = "Callable functions that be composed/piped using >> and <<"
authors = ["Todd Iverson <tiverson@winona.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
python-forge = "^18.6"
toolz = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
