[project]
name = "composable"
version = "1.0.2"
description = "Callable functions that be composed/piped using >> and <<"
authors = [
    {name="Todd Iverson",email="tiverson@winona.edu"}
    ]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "toolz (>=0.11.1)"
]

[tool.poetry]
packages = [{include = "composable", from = "."}]


[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
pytest-cov = ">=6.0.0"
jupyter = ">=1.1.1"
myst-nb = ">=1.2.0"
sphinx-autoapi = ">=3.6.0"
sphinx-rtd-theme = ">=3.0.2"
ghp-import = ">=2.1.0"
python-semantic-release = {version = "^9.21.0", python = "^3.12"}

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
branch = "main"                                       # branch to make releases of
changelog_file = "CHANGELOG.md"                       # changelog file
build_command = "pip install poetry && poetry build"  # build dists                                           

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
